using System.Collections;
using System.Collections.Generic;
using UnityEngine;

//ユーザ操作によって状態が変わるもの
public enum eventList{

    LIST_LEN
}
public enum itemList{
    ink, 
    hasami, 
    LIST_LEN
}

//Scene名と同じ
public enum SceneList{

    LIST_LEN
}