@startuml
skinparam classAttributeIconSize 0
    frame DontLoad{
        package Camera {
            object inheritCamera
        }
        package Player {
            object inheritPlayer
            object ClickEventHandler
            object GameDataCollection{
                - eventFlagList : bool[] 
                - itemList : List<enum itemList> 
                - selectedItem : String
            }
            object GameManager
        }
        'アイテムUI
        package ItemUICanvas{
            object inheritItemCanvas
            object itemListController{
                --
                + pushItem(Name : String)
                + popItem (Name : String)
            }
        }

        package TextUICanvas{
            object inheritTextCanvas
            object TextController
        }
    }
    frame map{
        package BackGround{
            object InitStage
        }
        package EventImage1{
            object ClickEventListener1
            note bottom: Scene遷移
        }
        package EventImage2{
            object ClickEventListener2
            note bottom: アイテム取得
        }
        package EventImage3{
            object ClickEventListener3
            note bottom: 状態変化
        }
    }

    frame enum{
        enum itemList
        enum eventList
        enum TextList
        enum SceneList
    }



    ClickEventHandler <-[#Black]-- ClickEventListener1
    ClickEventHandler <-[#Black]-- ClickEventListener2
    ClickEventHandler <--[#Black]- ClickEventListener3




    ClickEventListener1 --> SceneList
    ClickEventListener2 --> GameDataCollection
    ClickEventListener2 ---> itemListController
    ClickEventListener3 --> GameDataCollection

    ClickEventListener2 ---> TextController

    InitStage -- GameDataCollection



    GameManager -- GameDataCollection
    GameDataCollection *--- eventList

@enduml